部や課のみの選択可能

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;database=EmployeeManagement;uid=empuser;pwd=empuser;"
+    "DefaultConnection": "server=localhost;database=EmployeeManagement;uid=empuser;pwd=empuser;charset=utf8mb4;"
   },
   "Logging": {
     "LogLevel": {
